# FreshBoy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install  install.ps1  install.sh
cmake/: gnu.cmake  win.cmake
src/: CMakeLists.txt  main.cc
src/app/: CMakeLists.txt  app.cc  app.h  demo.cc  demo.h  main.cc  parser.cc  parser.h
src/gb/: CMakeLists.txt  background.cc  background.h  bg_base.cc  bg_base.h  cartridge.cc  cartridge.h  color.cc  color.h  demo.cc  demo.h  display.h  file.cc  file.h  gb.cc  gb.h  header.cc  header.h  lcd.cc  lcd.h  lcd_regs.cc  memblock.cc  memblock.h  memory.cc  memory.h  palettes.cc  palettes.h  sprite_renderer.cc  sprite_renderer.h  sprite_table.cc  sprite_table.h  tile_bank.cc  tile_bank.h  tile_banks.cc  tile_banks.h  tile_maps.cc  tile_maps.h  window.cc  window.h
src/gb/api/: CMakeLists.txt  api.cc  api.h
src/gb/apu/: CMakeLists.txt  apu.cc  apu.h  channel_1.cc  channel_1.h  channel_2.cc  channel_2.h  channel_3.cc  channel_3.h  channel_4.cc  channel_4.h  components.cc  components.h  noise.cc  noise.h  sound.cc  sound.h  sweep.cc  sweep.h  tone.cc  tone.h  wave.cc  wave.h
src/gb/cart/: CMakeLists.txt  cartridge.cc  cartridge.h  file.cc  file.h  header.cc  header.h  mbc.cc  mbc.h  mbc1.cc  mbc1.h  mbc2.cc  mbc2.h  mbc3.cc  mbc3.h  mbc5.cc  mbc5.h  rom.cc  rom.h
src/gb/cpu/: CMakeLists.txt  alu_ops.cc  alu_ops.h  bit_ops.cc  bit_ops.h  cpu.cc  cpu.h  flow_ops.cc  flow_ops.h  interrupt.cc  interrupt.h  mem_ops.cc  mem_ops.h  ops.cc  ops.h  registers.cc  registers.h  spec_ops.cc  spec_ops.h  switches.cc  timing.h
src/gb/misc/: CMakeLists.txt  input.cc  input.h  serial.cc  serial.h  timer.cc  timer.h
src/gb/mmu/: CMakeLists.txt  boot.h  memory.cc  memory.h  mmu.cc  mmu.h
src/gb/ppu/: CMakeLists.txt  background.cc  background.h  bg_base.cc  bg_base.h  color.cc  color.h  display.h  dot.cc  dot.h  framebuffer.cc  framebuffer.h  lcd.cc  lcd.h  lcd_regs.cc  lcd_regs.h  palettes.cc  palettes.h  sprite_renderer.cc  sprite_renderer.h  sprite_table.cc  sprite_table.h  tile_banks.cc  tile_banks.h  tile_maps.cc  tile_maps.h  window.cc  window.h
src/gb/utils/: CMakeLists.txt  bits.h  log.cc  log.h  path.h  test.cc  types.h
src/media/: CMakeLists.txt  audio.cc  audio.h  event_manager.cc  event_manager.h  instance.cc  instance.h  key.cc  key.h  renderer.cc  renderer.h  texture.cc  texture.h  window.cc  window.h  wrapper.h
